--- a/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj.filters
+++ b/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Item02.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Item03.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
