Update Effective Modern C++ Item06

--- a/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj
+++ b/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj
@@ -123,6 +123,7 @@
     <ClInclude Include="Item03.h" />
     <ClInclude Include="Item04.h" />
     <ClInclude Include="Item05.h" />
+    <ClInclude Include="Item06.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
