--- a/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj
+++ b/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj
@@ -124,6 +124,7 @@
     <ClInclude Include="Item04.h" />
     <ClInclude Include="Item05.h" />
     <ClInclude Include="Item06.h" />
+    <ClInclude Include="Item07.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
