--- a/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj.filters
+++ b/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="Item06.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Item07.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
