--- a/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj
+++ b/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj
@@ -125,6 +125,7 @@
     <ClInclude Include="Item05.h" />
     <ClInclude Include="Item06.h" />
     <ClInclude Include="Item07.h" />
+    <ClInclude Include="Item08.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
