--- a/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj.filters
+++ b/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="Item08.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Item09.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
