Update Effective Modern C++ Item10

--- a/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj
+++ b/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj
@@ -127,6 +127,7 @@
     <ClInclude Include="Item07.h" />
     <ClInclude Include="Item08.h" />
     <ClInclude Include="Item09.h" />
+    <ClInclude Include="Item10.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
