--- a/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj.filters
+++ b/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClInclude Include="Item09.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Item10.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
