--- a/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj
+++ b/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj
@@ -128,6 +128,7 @@
     <ClInclude Include="Item08.h" />
     <ClInclude Include="Item09.h" />
     <ClInclude Include="Item10.h" />
+    <ClInclude Include="Item11.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
