--- a/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj.filters
+++ b/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="Item10.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Item11.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
