Update Effective Modern C++ Item13

--- a/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj
+++ b/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj
@@ -130,6 +130,7 @@
     <ClInclude Include="Item10.h" />
     <ClInclude Include="Item11.h" />
     <ClInclude Include="Item12.h" />
+    <ClInclude Include="Item13.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
