--- a/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj
+++ b/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj
@@ -131,6 +131,7 @@
     <ClInclude Include="Item11.h" />
     <ClInclude Include="Item12.h" />
     <ClInclude Include="Item13.h" />
+    <ClInclude Include="Item14.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
