--- a/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj.filters
+++ b/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClInclude Include="Item13.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Item14.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
