--- a/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj
+++ b/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj
@@ -134,6 +134,9 @@
     <ClInclude Include="Item14.h" />
     <ClInclude Include="Item15.h" />
     <ClInclude Include="Item16.h" />
+    <ClInclude Include="Item17.h" />
+    <ClInclude Include="Item21.h" />
+    <ClInclude Include="MemoyUsage.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
