--- a/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj.filters
+++ b/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="Item01.h">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Item22.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Item02.h">
@@ -84,6 +87,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Item20.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Item22.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
