--- a/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj
+++ b/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj
@@ -141,6 +141,7 @@
     <ClInclude Include="Item20.h" />
     <ClInclude Include="Item21.h" />
     <ClInclude Include="Item22.h" />
+    <ClInclude Include="Item23.h" />
     <ClInclude Include="MemoyUsage.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
