Update Effective Modern C++ Item24

--- a/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj
+++ b/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj
@@ -142,6 +142,7 @@
     <ClInclude Include="Item21.h" />
     <ClInclude Include="Item22.h" />
     <ClInclude Include="Item23.h" />
+    <ClInclude Include="Item24.h" />
     <ClInclude Include="MemoyUsage.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
