--- a/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj.filters
+++ b/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj.filters
@@ -95,5 +95,8 @@
     <ClInclude Include="Item23.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Item24.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
