--- a/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj
+++ b/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="Item22.h" />
     <ClInclude Include="Item23.h" />
     <ClInclude Include="Item24.h" />
+    <ClInclude Include="Item25.h" />
     <ClInclude Include="MemoyUsage.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
