Update Effective Modern C++ Item27

--- a/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj
+++ b/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj
@@ -145,6 +145,7 @@
     <ClInclude Include="Item24.h" />
     <ClInclude Include="Item25.h" />
     <ClInclude Include="Item26.h" />
+    <ClInclude Include="Item27.h" />
     <ClInclude Include="MemoyUsage.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
