--- a/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj.filters
+++ b/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj.filters
@@ -104,5 +104,8 @@
     <ClInclude Include="Item26.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Item27.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
