Update Effective Modern C++ Item28

--- a/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj
+++ b/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj
@@ -146,6 +146,7 @@
     <ClInclude Include="Item25.h" />
     <ClInclude Include="Item26.h" />
     <ClInclude Include="Item27.h" />
+    <ClInclude Include="Item28.h" />
     <ClInclude Include="MemoyUsage.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
