--- a/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj.filters
+++ b/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj.filters
@@ -107,5 +107,8 @@
     <ClInclude Include="Item27.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Item28.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
