Update Effective Modern C++ Item30

--- a/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj
+++ b/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj
@@ -147,6 +147,8 @@
     <ClInclude Include="Item26.h" />
     <ClInclude Include="Item27.h" />
     <ClInclude Include="Item28.h" />
+    <ClInclude Include="Item29.h" />
+    <ClInclude Include="Item30.h" />
     <ClInclude Include="MemoyUsage.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
