Update Effective Modern C++ Item31

--- a/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj.filters
+++ b/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj.filters
@@ -116,5 +116,8 @@
     <ClInclude Include="Item30.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Item31.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
