--- a/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj
+++ b/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj
@@ -149,6 +149,7 @@
     <ClInclude Include="Item28.h" />
     <ClInclude Include="Item29.h" />
     <ClInclude Include="Item30.h" />
+    <ClInclude Include="Item31.h" />
     <ClInclude Include="MemoyUsage.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
