--- a/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj.filters
+++ b/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj.filters
@@ -119,5 +119,8 @@
     <ClInclude Include="Item31.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Item32.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
