--- a/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj
+++ b/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj
@@ -152,6 +152,7 @@
     <ClInclude Include="Item31.h" />
     <ClInclude Include="Item32.h" />
     <ClInclude Include="Item33.h" />
+    <ClInclude Include="Item34.h" />
     <ClInclude Include="MemoyUsage.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
