--- a/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj.filters
+++ b/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj.filters
@@ -125,5 +125,8 @@
     <ClInclude Include="Item33.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Item34.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
