--- a/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj.filters
+++ b/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj.filters
@@ -128,5 +128,11 @@
     <ClInclude Include="Item34.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Item35.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Item36.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
