--- a/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
+++ b/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Item12.cs" />
     <Compile Include="Item13.cs" />
     <Compile Include="Item14.cs" />
+    <Compile Include="Item15.cs" />
     <Compile Include="MainProgram.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
