--- a/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj.filters
+++ b/Effective Modern C++/EffectiveModernCpp/EffectiveModernCpp.vcxproj.filters
@@ -134,5 +134,8 @@
     <ClInclude Include="Item36.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Item41.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
