Update Effective CSharp Item17

--- a/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
+++ b/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Item14.cs" />
     <Compile Include="Item15.cs" />
     <Compile Include="Item16.cs" />
+    <Compile Include="Item17.cs" />
     <Compile Include="MainProgram.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
