Update Effective CSharp Item18

--- a/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
+++ b/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Item15.cs" />
     <Compile Include="Item16.cs" />
     <Compile Include="Item17.cs" />
+    <Compile Include="Item18.cs" />
     <Compile Include="MainProgram.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
