--- a/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
+++ b/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Item16.cs" />
     <Compile Include="Item17.cs" />
     <Compile Include="Item18.cs" />
+    <Compile Include="Item19.cs" />
     <Compile Include="MainProgram.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
