Update Effective CSharp Item20

--- a/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
+++ b/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Item17.cs" />
     <Compile Include="Item18.cs" />
     <Compile Include="Item19.cs" />
+    <Compile Include="Item20.cs" />
     <Compile Include="MainProgram.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
