--- a/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
+++ b/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Item18.cs" />
     <Compile Include="Item19.cs" />
     <Compile Include="Item20.cs" />
+    <Compile Include="Item21.cs" />
     <Compile Include="MainProgram.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
