--- a/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
+++ b/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Item20.cs" />
     <Compile Include="Item21.cs" />
     <Compile Include="Item22.cs" />
+    <Compile Include="Item23.cs" />
     <Compile Include="MainProgram.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
