--- a/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
+++ b/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Item24.cs" />
     <Compile Include="Item25.cs" />
     <Compile Include="Item26.cs" />
+    <Compile Include="Item27.cs" />
     <Compile Include="MainProgram.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
