--- a/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
+++ b/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Item26.cs" />
     <Compile Include="Item27.cs" />
     <Compile Include="Item28.cs" />
+    <Compile Include="Item29.cs" />
     <Compile Include="MainProgram.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
