--- a/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
+++ b/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Item28.cs" />
     <Compile Include="Item29.cs" />
     <Compile Include="Item30.cs" />
+    <Compile Include="Item31.cs" />
     <Compile Include="MainProgram.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
