--- a/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
+++ b/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Item31.cs" />
     <Compile Include="Item32.cs" />
     <Compile Include="Item33.cs" />
+    <Compile Include="Item34.cs" />
     <Compile Include="MainProgram.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
