--- a/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
+++ b/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Item33.cs" />
     <Compile Include="Item34.cs" />
     <Compile Include="Item35.cs" />
+    <Compile Include="Item36.cs" />
     <Compile Include="MainProgram.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
