--- a/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
+++ b/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Item34.cs" />
     <Compile Include="Item35.cs" />
     <Compile Include="Item36.cs" />
+    <Compile Include="Item37.cs" />
     <Compile Include="MainProgram.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
