Update Effective CSharp Item38

--- a/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
+++ b/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Item35.cs" />
     <Compile Include="Item36.cs" />
     <Compile Include="Item37.cs" />
+    <Compile Include="Item38.cs" />
     <Compile Include="MainProgram.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
