Update Effective CSharp Item39

--- a/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
+++ b/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Item36.cs" />
     <Compile Include="Item37.cs" />
     <Compile Include="Item38.cs" />
+    <Compile Include="Item39.cs" />
     <Compile Include="MainProgram.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
