Update Effective C++ Item02

--- a/Effective C++/EffectiveCPP/EffectiveCPP/EffectiveCPP.vcxproj
+++ b/Effective C++/EffectiveCPP/EffectiveCPP/EffectiveCPP.vcxproj
@@ -152,6 +152,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="EffectiveC++\Item31.h" />
+    <ClInclude Include="EffectiveC++\Item02.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
