Update Effective C++ Item06

--- a/Effective C++/EffectiveCPP/EffectiveCPP/EffectiveCPP.vcxproj
+++ b/Effective C++/EffectiveCPP/EffectiveCPP/EffectiveCPP.vcxproj
@@ -151,6 +151,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="EffectiveC++\Item05.h" />
     <ClInclude Include="EffectiveC++\Item31.h" />
     <ClInclude Include="EffectiveC++\Item02.h" />
     <ClInclude Include="pch.h" />
