--- a/Effective C++/EffectiveCPP/EffectiveCPP/EffectiveCPP.vcxproj.filters
+++ b/Effective C++/EffectiveCPP/EffectiveCPP/EffectiveCPP.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="EffectiveC++\Item01.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="EffectiveC++\Item19.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
