Update Effective C++ Item21~30

--- a/Effective C++/EffectiveCPP/EffectiveCPP/EffectiveCPP.vcxproj
+++ b/Effective C++/EffectiveCPP/EffectiveCPP/EffectiveCPP.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="EffectiveC++\Item01.h" />
     <ClInclude Include="EffectiveC++\Item05.h" />
     <ClInclude Include="EffectiveC++\Item19.h" />
+    <ClInclude Include="EffectiveC++\Item22.h" />
     <ClInclude Include="EffectiveC++\Item31.h" />
     <ClInclude Include="EffectiveC++\Item02.h" />
     <ClInclude Include="pch.h" />
