--- a/Effective C++/EffectiveCPP/EffectiveCPP/EffectiveCPP.vcxproj.filters
+++ b/Effective C++/EffectiveCPP/EffectiveCPP/EffectiveCPP.vcxproj.filters
@@ -51,6 +51,18 @@
     <ClInclude Include="EffectiveC++\Item38.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="EffectiveC++\Item52.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="EffectiveC++\Item53.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="EffectiveC++\Item54.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="EffectiveC++\Item55.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
