Update Effective STL Item03

--- a/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
+++ b/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
@@ -117,6 +117,7 @@
   <ItemGroup>
     <ClInclude Include="Item01.h" />
     <ClInclude Include="Item02.h" />
+    <ClInclude Include="Item03.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EffectiveSTL.cpp" />
