--- a/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
+++ b/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
@@ -119,6 +119,7 @@
     <ClInclude Include="Item02.h" />
     <ClInclude Include="Item03.h" />
     <ClInclude Include="Item04.h" />
+    <ClInclude Include="Item05.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EffectiveSTL.cpp" />
