Update Effective STL Item06

--- a/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
+++ b/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
@@ -120,6 +120,7 @@
     <ClInclude Include="Item03.h" />
     <ClInclude Include="Item04.h" />
     <ClInclude Include="Item05.h" />
+    <ClInclude Include="Item06.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EffectiveSTL.cpp" />
