Update Effective STL Item09

--- a/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
+++ b/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
@@ -123,6 +123,7 @@
     <ClInclude Include="Item06.h" />
     <ClInclude Include="Item07.h" />
     <ClInclude Include="Item08.h" />
+    <ClInclude Include="Item09.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EffectiveSTL.cpp" />
