Update Effective STL Item10

--- a/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
+++ b/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
@@ -124,6 +124,7 @@
     <ClInclude Include="Item07.h" />
     <ClInclude Include="Item08.h" />
     <ClInclude Include="Item09.h" />
+    <ClInclude Include="Item10.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EffectiveSTL.cpp" />
