Update Effective STL Item11

--- a/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
+++ b/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
@@ -125,6 +125,7 @@
     <ClInclude Include="Item08.h" />
     <ClInclude Include="Item09.h" />
     <ClInclude Include="Item10.h" />
+    <ClInclude Include="Item11.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EffectiveSTL.cpp" />
