Update Effective STL Item12

--- a/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
+++ b/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
@@ -126,6 +126,7 @@
     <ClInclude Include="Item09.h" />
     <ClInclude Include="Item10.h" />
     <ClInclude Include="Item11.h" />
+    <ClInclude Include="Item12.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EffectiveSTL.cpp" />
