--- a/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
+++ b/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
@@ -128,6 +128,7 @@
     <ClInclude Include="Item11.h" />
     <ClInclude Include="Item12.h" />
     <ClInclude Include="Item13.h" />
+    <ClInclude Include="Item14.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EffectiveSTL.cpp" />
