--- a/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj.filters
+++ b/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="Item13.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Item14.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EffectiveSTL.cpp">
