--- a/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
+++ b/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
@@ -130,6 +130,7 @@
     <ClInclude Include="Item13.h" />
     <ClInclude Include="Item14.h" />
     <ClInclude Include="Item15.h" />
+    <ClInclude Include="Item17.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EffectiveSTL.cpp" />
