--- a/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
+++ b/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
@@ -132,6 +132,7 @@
     <ClInclude Include="Item15.h" />
     <ClInclude Include="Item17.h" />
     <ClInclude Include="Item18.h" />
+    <ClInclude Include="Item19.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EffectiveSTL.cpp" />
