Update Effective STL Item20

--- a/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
+++ b/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
@@ -133,6 +133,7 @@
     <ClInclude Include="Item17.h" />
     <ClInclude Include="Item18.h" />
     <ClInclude Include="Item19.h" />
+    <ClInclude Include="Item20.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EffectiveSTL.cpp" />
