Update Effective STL Item21

--- a/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
+++ b/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
@@ -134,6 +134,7 @@
     <ClInclude Include="Item18.h" />
     <ClInclude Include="Item19.h" />
     <ClInclude Include="Item20.h" />
+    <ClInclude Include="Item21.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EffectiveSTL.cpp" />
