--- a/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
+++ b/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
@@ -137,6 +137,7 @@
     <ClInclude Include="Item21.h" />
     <ClInclude Include="Item22.h" />
     <ClInclude Include="Item23.h" />
+    <ClInclude Include="Item24.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EffectiveSTL.cpp" />
