Update Effective STL Item26

--- a/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
+++ b/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
@@ -143,6 +143,9 @@
   <ItemGroup>
     <ClCompile Include="EffectiveSTL.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Item26.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
