--- a/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj.filters
+++ b/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClInclude Include="Item28.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Item29.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EffectiveSTL.cpp">
@@ -102,5 +105,8 @@
   <ItemGroup>
     <None Include="Item26.md" />
     <None Include="Item28.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="FileReadSample.txt" />
   </ItemGroup>
 </Project>
