Update Effective CSharp Item 42

--- a/Document/C#/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
+++ b/Document/C#/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Item39.cs" />
     <Compile Include="Item40.cs" />
     <Compile Include="Item41.cs" />
+    <Compile Include="Item42.cs" />
     <Compile Include="MainProgram.cs" />
   </ItemGroup>
   <ItemGroup>
