--- a/Document/C#/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
+++ b/Document/C#/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Item40.cs" />
     <Compile Include="Item41.cs" />
     <Compile Include="Item42.cs" />
+    <Compile Include="Item43.cs" />
     <Compile Include="MainProgram.cs" />
   </ItemGroup>
   <ItemGroup>
