Update Effective CSharp Item44

--- a/Document/C#/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
+++ b/Document/C#/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Item41.cs" />
     <Compile Include="Item42.cs" />
     <Compile Include="Item43.cs" />
+    <Compile Include="Item44.cs" />
     <Compile Include="MainProgram.cs" />
   </ItemGroup>
   <ItemGroup>
