--- a/Document/C#/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
+++ b/Document/C#/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Item43.cs" />
     <Compile Include="Item44.cs" />
     <Compile Include="Item45.cs" />
+    <Compile Include="Item46.cs" />
     <Compile Include="MainProgram.cs" />
   </ItemGroup>
   <ItemGroup>
